# sogserver

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  go.mod  go.sum  main.cpp  utils_curl
CMakeModules/: FindSDL2_ttf.cmake
cmd/oglike_server/: main.go
configs/: development.yml  local.yml  production.yml
data/: debug.sh  run.sh
data/config/: local
internal/: accounts_routes.go  routes.go  routes_utils.go  server.go  universes_routes.go
internal/data/: account_proxy.go  accounts_proxy.go  action_proxy.go  building_module.go  building_proxy.go  common_proxy.go  composed_proxy.go  data_functions.go  data_struct.go  db_error_utils.go  db_model_fetching.go  defense_proxy.go  filters.go  fleet_proxy.go  fleets_proxy.go  planet_proxy.go  planets_proxy.go  player_proxy.go  players_proxy.go  ship_proxy.go  ships_proxy.go  technology_proxy.go  universe_proxy.go  upgrade_action.go
internal/game/: account.go  acs_fleet.go  action.go  actions.go  building_action.go  coordinate.go  debris.go  defense_action.go  fixed_cost_action.go  fleet.go  fleet_attacking.go  fleet_collecting.go  fleet_colonization.go  fleet_component.go  fleet_destroy.go  fleet_espionage.go  fleet_fight.go  fleet_harvesting.go  message.go  model.go  moon.go  planet.go  planet_db_utils.go  player.go  player_db_utils.go  progress_action.go  ship_action.go  technology_action.go  universe.go  utils.go
internal/locker/: concurrent_lock.go
internal/model/: account.go  actions.go  association_table.go  base_module.go  (+21 more)
og_db/: Dockerfile  Makefile  initdb.sql
scripts/: debug.sh  run.sh
(+124 files in other folders)
